Fixed menu overlap with other items

--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -38,7 +38,7 @@
     &_hidden {
       display: none;
     }
-    z-index: 1;
+    z-index: 2;
     box-sizing: border-box;
     width: inherit;
     padding-top: 7px;
